# nemertea_cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.cache/clangd/index/: edge.cpp.88532474E773E875.idx  edge.h.EE534D3D86400AEA.idx  globals.cpp.9CE001496D846E1D.idx  globals.h.EE1ED12D99B3878C.idx  graph.cpp.3562239BAF892A1E.idx  graph.h.3BE5FACDB4EB923D.idx  main.cpp.BFC3F9C484B487A0.idx  nbfs.cpp.C170DA413966B1F1.idx  nbfs.h.60CE6DF1029379D9.idx  nemertea.cpp.B42E12304EB34BA7.idx  nemertea.h.0D21DD9AC76F3AC9.idx  node.cpp.EBD422EECA7198F7.idx  node.h.8EA833AAC701D4D2.idx  vertex.cpp.A3DE97830CD67A12.idx  vertex.h.DB88477AF228F086.idx
graphs/: 01_graph1001_hcp.json  01_graph947_hcp.json  02_chvatal.json  02_frucht.json  02_watkins_snark.json  03_hoffman-singleton.json  03_petersen.json  04_att48_tsp.json  04_berlin52_tsp.json  04_rnet-58.json  05_dodecahedron.json  05_hexagon.json  big_generated.dot  big_generated.json  big_map.json  big_random.dot  big_random.json  big_super.json  desargues.json  dodecahedron.dot  dodecahedron.json  formula.dot  formula.json  hypercube.json  pipa.dot  pipa.json  seven.json  triangle.dot  triangle.json
results/: benchmark_20260401_132430.csv  benchmark_20260410_215413.csv  benchmark_20260412_194717.csv  benchmark_20260412_195019.csv
scripts/: benchmark.py  profile.py
src/: dfs.h  edge.cpp  edge.h  globals.cpp  globals.h  graph.cpp  graph.h  graph.hpp  heldkarp.h  main.cpp  nbfs.cpp  nbfs.h  nbfs.hpp  nemertea.cpp  nemertea.h  node.cpp  node.h  vertex.cpp  vertex.h  vertex.hpp
src/backtracking/: main.cpp
src/common/: graph.cpp  graph.hpp
src/nemertea/: graph.cpp  graph.hpp  main.cpp  nbfs.cpp  nbfs.hpp  nemertea.cpp  nemertea.hpp  proboscis.cpp  proboscis.hpp  vertex.cpp  vertex.hpp
src/warnsdorff/: main.cpp
